kubernetes/staging/gcp/istio-gateway.staging.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: desk-booking-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: staging-hotdesk-dynatrace-com-cert
      hosts:
        - aws.staging.hotdesk.dynatrace.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: desk-booking
spec:
  hosts:
    - 'aws.staging.hotdesk.dynatrace.com'
  gateways:
    - desk-booking-gateway
  http:
    - name: 'api-routes'
      match:
        - uri:
            prefix: '/api'
      route:
        - destination:
            host: api
    - name: 'frontend-routes'
      route:
        - destination:
            host: frontend
